--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
   outline: 0;
   box-sizing: border-box;
 }
-
+:root {
+  --prim-color: #3bc4ff;
+  --secound-color: #fff;
+  --third-color: #0000;
+}
 body {
   background: black;
   color: ;
@@ -27,6 +31,8 @@ button {
   align-items: center;
   justify-content: space-between;
   padding: 1.25rem 6.25rem;
+  background-color: var(--prim-color);
+  text-transform: uppercase;
 }
 .navbar__logo {
   width: 12.5rem;
@@ -35,10 +41,24 @@ button {
   height: 100%;
   width: 100%;
 }
-.navbar ul,
+.navbar ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  list-style: none;
+  text-decoration: none;
+}
+.navbar ul li a {
+  color: var(--secound-color);
+  text-decoration: none;
+}
 .navbar__socials ul li {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 2rem;
+}
+.navbar__socials ul li a {
+  color: var(--secound-color);
 }
