--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ input,
 button {
   font-size: ;
   font-family: ;
+  width: 100%;
+  height: 100vh;
 }
 
 button {
@@ -65,4 +67,13 @@ button {
 .navbar__socials ul li a {
   color: var(--secound-color);
   font-size: 18px;
+}
+.video__audio video {
+  width: 100%;
+  height: 100vh;
+  object-fit: fill;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
