--- a/style.css
+++ b/style.css
@@ -77,3 +77,10 @@ button {
   left: 0;
   z-index: -1;
 }
+.video__overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: fill;
+}
