--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ button {
 button {
   cursor: pointer;
 }
-
 .navbar {
   display: flex;
   align-items: center;
@@ -36,7 +35,7 @@ button {
   background-color: var(--prim-color);
   text-transform: uppercase;
   position: fixed;
-  width: 100%;
+  width: 1380px;
 }
 .navbar__logo {
   width: 12.5rem;
@@ -69,9 +68,9 @@ button {
   font-size: 18px;
 }
 .video__audio video {
-  width: 100%;
-  height: 100vh;
-  object-fit: fill;
+  width: 1380px;
+  height: 1080px;
+  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -80,7 +79,54 @@ button {
 .video__overlay {
   position: absolute;
   top: 0;
-  width: 100%;
-  height: 100vh;
+  width: 1380px;
+  height: 1080px;
   object-fit: fill;
+}
+.hero__efterskole-button,
+.hero__ridebane-button,
+.hero__ridehal-button,
+.hero__ridestald-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  animation: pulse 2s infinite;
+  background-color: rgba(59, 196, 255, 0.7);
+  cursor: pointer;
+  color: lightgray;
+  border: none;
+}
+.hero__efterskole-button {
+  position: absolute;
+  top: 400px;
+  left: 900px;
+}
+.hero__ridebane-button {
+  position: absolute;
+  top: 650px;
+  left: 400px;
+}
+.hero__ridehal-button {
+  position: absolute;
+  top: 900px;
+  left: 100px;
+}
+.hero__ridestald-button {
+  position: absolute;
+  top: 500px;
+  left: 550px;
+}
+@keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(59, 196, 255, 0.4);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
+  }
 }
