--- a/style.css
+++ b/style.css
@@ -66,3 +66,62 @@ button {
   color: var(--secound-color);
   font-size: 18px;
 }
+.dropbtn {
+  background-color:#3bc4ff;
+  color: white;
+   text-decoration: none;
+   font-size: 15px;
+     height: 60px;
+     width: auto;
+     border: 2px;
+     cursor: pointer;
+     margin: 1px;
+     transition-property: background-color;
+     transition-duration: .2s;
+     transition-timing-function: linear;
+     padding: 15px;
+ }
+ 
+ .dropbtn:hover,
+ .dropbtn:focus {
+     background-color: transparent;
+ }
+ 
+ .dropdown {
+     position: relative;
+     display: inline-block;
+ }
+ 
+ .dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: #f1f1f1;
+     min-width: 160px;
+     overflow: auto;
+     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+     z-index: 1;
+ }
+ 
+ .dropdown-content a {
+     color: #2980B9;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+ }
+ 
+ .dropdown a:hover {
+     background-color: #ddd;
+ }
+ 
+ .show {
+     display: block;
+ }
+ button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
