--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ button {
   width: 1380px;
   height: 1080px;
   object-fit: fill;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .hero__efterskole-button,
 .hero__ridebane-button,
@@ -135,44 +136,88 @@ button {
 =            Klank-efterskole-svg            =
 =============================================*/
 
-.e466f0be-6ccf-419c-a3d0-e6138bef764c {
+.fe31d9eb-f4f5-468d-a484-91bd347d50a2 {
+  fill: none;
+}
+.b3e2becc-999e-4c1d-aa0d-db328bbe0c4c {
   fill: none;
   stroke: white;
   stroke-miterlimit: 10;
   stroke-width: 2px;
 }
-#b717b9e7-ed37-4ca7-b1ab-06802f4774f5 {
+#af7c5496-b297-4d3d-b705-41f5982dec9f {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 400px;
   fill: white;
-  top: 18rem;
-  left: 43rem;
-}
-#b717b9e7-ed37-4ca7-b1ab-06802f4774f5:hover {
-  display: block;
+  top: 14rem;
+  left: 32rem;
+  rotate: 13deg;
 }
 /*=====  End of Klank-efterskole-svg  ======*/
 
 /*=============================================
 =            klank-efterskole-ridestald            =
 =============================================*/
-#b069ed78-c399-4f8b-8f04-ecb72821cca9 {
-  width: 200px;
-  height: 200px;
+#fc5c3aea-e5db-46f8-a677-8107a899b9df {
+  width: 400px;
   position: absolute;
-  top: 25rem;
-  left: 39.5rem;
+  top: 19rem;
+  left: 13rem;
   fill: white;
 }
-.bc5a4d28-76ac-4c37-9767-8c643a9d7006 {
+.a05be03d-2ad1-40e7-a148-e4560054b3c7 {
   fill: none;
 }
-.ba9601e5-1b49-44a0-a24a-7415f9a1e9d9 {
+.ee641adb-c53f-434c-9b60-d9fe04e53fb8 {
   fill: none;
   stroke: white;
   stroke-miterlimit: 10;
   stroke-width: 2px;
 }
-
 /*=====  End of klank-efterskole-ridestald  ======*/
+
+/*=============================================
+=            klank-efterskole-ridebane            =
+=============================================*/
+
+.e4f81103-74ce-4e9c-8c2b-deecd39bdc88 {
+  fill: none;
+}
+.a8b4325d-3bed-465e-8dc9-7e941589b30f {
+  fill: none;
+  stroke: white;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+}
+#b85385f2-8005-427c-a25f-a5eb16e4edcc {
+  width: 400px;
+  position: absolute;
+  top: 37rem;
+  left: 31rem;
+  fill: white;
+  rotate: 15deg;
+}
+/*=====  End of klank-efterskole-ridebane  ======*/
+
+/*=============================================
+=            klank-efterskole-ridehal            =
+=============================================*/
+
+.efa8fb4b-e130-431d-a0fb-0f9fbdf822e3 {
+  fill: none;
+}
+.fc2a2add-0c59-4063-83f1-ab06c7225470 {
+  fill: none;
+  stroke: white;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+}
+#a08ce68d-86f2-4374-86b5-cbe37ccc6905 {
+  width: 400px;
+  position: absolute;
+  top: 53rem;
+  left: 13rem;
+  fill: white;
+  rotate: 15deg;
+}
+/*=====  End of klank-efterskole-ridehal  ======*/
