--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button {
 button {
   cursor: pointer;
 }
-.navbar {
+nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -38,35 +38,40 @@ button {
   width: 1380px;
   z-index: 100;
 }
-.navbar__logo {
-  width: 12.5rem;
+nav ul li {
+  display: inline-block;
+  position: relative;
 }
-.navbar__logo svg {
-  height: 100%;
-  width: 100%;
+nav ul li a {
+  color: #fff;
+  display: block;
+  font-size: 14px;
+  padding: 15px 14px;
+  transition: 0.3s linear;
 }
-.navbar ul {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 2rem;
-  list-style: none;
-  text-decoration: none;
+nav ul li:hover {
+  background: #126d9b;
 }
-.navbar ul li a {
-  color: var(--secound-color);
-  text-decoration: none;
-  font-size: 18px;
+nav ul li ul {
+  border-bottom: 5px solid #2ba0db;
+  display: none;
+  position: absolute;
+  width: 250px;
 }
-.navbar__socials ul li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 2rem;
+nav ul li ul li {
+  border-top: 1px solid #444;
+  display: block;
 }
-.navbar__socials ul li a {
-  color: var(--secound-color);
-  font-size: 18px;
+nav ul li ul li:first-child {
+  border-top: none;
+}
+nav ul li ul li a {
+  background: #373737;
+  display: block;
+  padding: 10px 14px;
+}
+nav ul li ul li a:hover {
+  background: #126d9b;
 }
 .video__audio video {
   width: 1380px;
