--- a/style.css
+++ b/style.css
@@ -27,6 +27,30 @@ button {
 button {
   cursor: pointer;
 }
+.container {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+}
+section {
+  scroll-snap-align: center;
+}
+section #section-one {
+  position: relative;
+}
+#section-two {
+  position: relative;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: url("https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_160x56dp.png")
+    no-repeat center center/cover;
+}
+section #section-two p {
+  font-size: 13rem;
+}
 .nav__container {
   display: flex;
   align-items: center;
